--- a/requirements.txt
+++ b/requirements.txt
@@ -58,9 +58,9 @@ nbconvert==6.1.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.4.0
-numpy==1.19.5
+numpy
 oauthlib==3.1.1
-opencv-python==4.5.5.62
+opencv-python-headless
 opt-einsum==3.3.0
 packaging==21.0
 pandas==1.3.0
